# dw-platform

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: copilot-instructions.md
cloudcanal/: README.md
config/: __init__.py  settings.py
docs/: ETL_GUIDE.md
docs/architecture/: data-flow.md  overview.md  tech-stack.md
docs/bi/: connection.md
docs/dev/: python-style.md  shell-style.md  sql-style.md
docs/etl/: demo-finance-chain.md  schedule.md
docs/modeling/: layer-spec.md  naming.md
docs/ops/: deployment.md  monitoring.md  troubleshooting.md
docs/sync/: cloudcanal.md  datax.md
examples/starrocks/: demo_finance_chain.sql  demo_finance_seed.sql  demo_finance_validation.sql
scripts/: __init__.py
scripts/api/: __init__.py  fetch_marketing_data.py
scripts/etl/: __init__.py  etl.py  finance_etl.py  marketing_etl.py  run_sql.py
scripts/etl/ads/: __init__.py  proc_ads_demo_project_monthly_finance.py
scripts/etl/dim/: __init__.py  proc_dim_demo_project.py
scripts/etl/dwd/: __init__.py  proc_dwd_demo_order_receivable.py
scripts/utils/: __init__.py  db.py  etl_refresh.py  sql_batch.py
shell/: run_api.sh  run_datax.sh  run_etl.sh
sql/finance/: ads_finance_report.sql  dwd_finance_detail.sql
sql/marketing/: ads_marketing_dashboard.sql  dwd_user_behavior.sql
tests/: __init__.py  test_demo_finance_chain.py  test_etl_entrypoint.py  test_etl_refresh.py  test_settings.py
(+2 files in other folders)
